<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View"/>

        <import type="com.example.starstream.util.ExtensionsKt" />

        <import type="com.example.starstream.util.ImageQuality" />

        <import type="com.example.starstream.util.IntentType" />

        <import type="com.example.starstream.util.MediaType" />

        <variable
            name="fragment"
            type="com.example.starstream.presentation.ui.moviedetails.MovieDetailsFragment" />

        <variable
            name="viewModel"
            type="com.example.starstream.presentation.ui.moviedetails.MovieDetailsViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@{fragment.backgroundColor}"
        android:orientation="vertical"
        tools:context=".presentation.ui.moviedetails.MovieDetailsFragment">

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout"
            isVisible="@{viewModel.uiState.success}"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <com.google.android.material.appbar.AppBarLayout
                android:id="@+id/appBarLayout"
                backgroundColor="@{fragment.backgroundColor}"
                collapsingToolbar="@{collapsingToolbarLayout}"
                frameLayout="@{frameLayout}"
                toolbarTitle="@{viewModel.details.title}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@{fragment.backgroundColor}"
                android:fitsSystemWindows="true">

                <com.google.android.material.appbar.CollapsingToolbarLayout
                    android:id="@+id/collapsingToolbarLayout"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/detail_poster_height"
                    app:contentScrim="@{fragment.backgroundColor}"
                    app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                    app:titleCollapseMode="scale"
                    app:toolbarId="@id/toolbar">

                    <FrameLayout
                        android:id="@+id/frameLayout"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fitsSystemWindows="true"
                        app:layout_collapseMode="parallax">

                        <ImageView
                            centerCrop="@{true}"
                            imageMediaType="@{MediaType.MOVIE}"
                            imageQuality="@{ImageQuality.HIGH}"
                            imageUrl="@{viewModel.details.posterPath}"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:src="@drawable/ic_baseline_movie_24" />

                        <LinearLayout
                            style="@style/BriefDetailParent"
                            transparentBackground="@{fragment.backgroundColor}">

                            <TextView
                                style="@style/BriefDetailTitle"
                                android:text="@{viewModel.details.title}"
                                tools:text="Movie Title" />

                            <LinearLayout
                                isVisible="@{!viewModel.details.releaseDate.empty || viewModel.details.runtime != 0}"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="6dp">

                                <TextView
                                    style="@style/BriefDetailBody"
                                    android:maxLength="4"
                                    android:text="@{viewModel.details.releaseDate}"
                                    tools:text="2024" />

                                <TextView
                                    style="@style/BriefDetailBody"
                                    isVisible="@{viewModel.details.releaseDate.empty || viewModel.details.runtime != 0}"
                                    android:layout_marginStart="6dp"
                                    android:layout_marginEnd="6dp"
                                    android:text="@string/bullet_point" />

                                <TextView
                                    style="@style/BriefDetailBody"
                                    isVisible="@{viewModel.details.runtime != 0}"
                                    android:text="@{ExtensionsKt.formatTime(viewModel.details.runtime, context)}"
                                    tools:text="0hr 0min" />

                            </LinearLayout>

                            <TextView
                                style="@style/BriefDetailBody"
                                android:drawablePadding="@dimen/textview_drawable_padding"
                                android:text="@{ExtensionsKt.round(viewModel.details.voteAverage) + @string/item_count_s(ExtensionsKt.thousandsSeparator(viewModel.details.voteCount,context))}"
                                app:drawableStartCompat="@drawable/ic_baseline_star_rate_18"
                                tools:text="0.0 (0)" />

                        </LinearLayout>

                    </FrameLayout>

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"

                        backArrowTint="@{fragment.backgroundColor}"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        app:layout_collapseMode="pin" />

                </com.google.android.material.appbar.CollapsingToolbarLayout>

            </com.google.android.material.appbar.AppBarLayout>

            <androidx.core.widget.NestedScrollView
                android:id="@+id/nestedScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@{fragment.backgroundColor}"
                app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="@dimen/top_margin_large">

                    <com.google.android.material.chip.ChipGroup
                        style="@style/DetailsTitle"
                        chipTint="@{fragment.backgroundColor}"
                        genreMediaType="@{MediaType.MOVIE}"
                        genres="@{viewModel.details.genres}"
                        isVisible="@{!viewModel.details.genres.empty}"
                        android:layout_marginBottom="@dimen/bottom_margin_large" />

                    <TextView
                        android:id="@+id/summary"
                        style="@style/DetailsTitle"
                        isVisible="@{!viewModel.details.overview.empty}"
                        android:text="@string/detail_summary" />

                    <TextView
                        style="@style/DetailsBody"
                        isVisible="@{!viewModel.details.overview.empty}"
                        android:layout_marginBottom="@dimen/bottom_margin_large"
                        android:text="@{viewModel.details.overview}"
                        tools:text="Summary" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        style="@style/TitleParent"
                        isVisible="@{!viewModel.details.videos.filterVideos(false).empty}">

                        <TextView
                            android:id="@+id/videos"
                            style="@style/Title"
                            android:text="@string/detail_title_trailers" />

                        <TextView
                            style="@style/ListItemCount"
                            android:text="@{@string/item_count(viewModel.details.videos.filterVideos(false).size())}"
                            app:layout_constraintStart_toEndOf="@id/videos" />

                        <TextView
                            style="@style/ListItemCount"
                            app:layout_constraintStart_toEndOf="@id/videos" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvVideos"
                        style="@style/RecyclerView"
                        isVisible="@{!viewModel.details.videos.filterVideos(false).empty}"
                        android:adapter="@{fragment.adapterVideos}" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:baselineAlignBottom="false"
                android:onClick="@{() -> viewModel.updateFavorites()}"
                android:src="@{viewModel.isInFavorites ? @drawable/ic_baseline_favorite_24 : @drawable/ic_baseline_favorite_border_24}"
                app:layout_anchor="@id/appBarLayout"
                app:layout_anchorGravity="end|bottom"
                tools:src="@drawable/ic_baseline_favorite_border_24" />

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <FrameLayout
            style="@style/BackButtonParent"
            isVisible="@{viewModel.uiState.loading || viewModel.uiState.error}">

            <ImageButton
                style="@style/BackButton"
                iconTint="@{fragment.backgroundColor}"
                android:onClick="@{()->fragment.onBackPressed()}" />

        </FrameLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            style="@style/Loading"
            isVisible="@{viewModel.uiState.loading}" />

    </LinearLayout>

</layout>